--- a/notebooks/nb_162_Offpolicy_distributional_shift_2.ipynb
+++ b/notebooks/nb_162_Offpolicy_distributional_shift_2.ipynb
@@ -252,7 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "POLICY_NAME = PolicyName.cql_discrete\n",
+    "POLICY_NAME = PolicyName.dqn\n",
     "\n",
     "NAME_EXPERT_DATA = name_combined_dataset\n",
     "# TrainedPolicyConfig is a handy object that will help us to deal with the policy configuration data.\n",
