Code adapted to new version of Tianshou=1.0.0

--- a/notebooks/nb_140_CollectDataWithMinari.ipynb
+++ b/notebooks/nb_140_CollectDataWithMinari.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "pycharm": {
-     "is_executing": true
+    "ExecuteTime": {
+     "start_time": "2023-11-24T16:52:11.335657Z",
+     "end_time": "2023-11-24T16:52:13.175313Z"
     }
    },
    "outputs": [],
@@ -70,7 +71,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-24T16:52:36.311793Z",
+     "end_time": "2023-11-24T16:52:36.454496Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# We have different 2-d grid environments registered.\n",
@@ -210,7 +216,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-24T16:52:47.643757Z",
+     "end_time": "2023-11-24T16:53:04.118273Z"
+    }
+   },
    "outputs": [],
    "source": [
     "DATA_SET_NAME = \"data\"\n",
@@ -269,7 +280,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-11-24T16:53:09.030154Z",
+     "end_time": "2023-11-24T16:53:09.660878Z"
+    }
+   },
    "outputs": [],
    "source": [
     "NAME_EXPERT_DATA = \"Grid_2D_8x8_discrete-data_rl_workshop-v0\"\n",
@@ -297,15 +313,24 @@
     "\n",
     "[ \\[Fu.Justin et. al.\\] D4RL: Datasets for Deep Data-Driven Reinforcement Learning](https://arxiv.org/abs/2004.07219)\n",
     "\n",
-    "[ MINARI: A dataset API for Offline Reinforcement Learning ](https://minari.farama.org/main/content/basic_usage/) "
+    "[ MINARI: A dataset API for Offline Reinforcement Learning ](https://minari.farama.org/main/content/basic_usage/)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tianshou_dev",
+   "name": "training_rl_ivan",
    "language": "python",
-   "name": "tianshou_dev"
+   "display_name": "training_rl_ivan"
   },
   "language_info": {
    "codemirror_mode": {
