--- a/notebooks/nb_151_imitation_learning-example.ipynb
+++ b/notebooks/nb_151_imitation_learning-example.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T08:19:31.038213Z",
-     "end_time": "2023-11-23T08:19:32.729502Z"
+     "start_time": "2023-11-24T16:41:35.307617Z",
+     "end_time": "2023-11-24T16:41:37.147465Z"
     }
    },
    "outputs": [],
@@ -72,8 +72,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T08:19:56.844041Z",
-     "end_time": "2023-11-23T08:19:56.851212Z"
+     "start_time": "2023-11-24T16:41:37.149613Z",
+     "end_time": "2023-11-24T16:41:37.150649Z"
     }
    },
    "outputs": [],
@@ -128,8 +128,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T08:20:06.535993Z",
-     "end_time": "2023-11-23T08:20:07.272402Z"
+     "start_time": "2023-11-24T16:42:05.870794Z",
+     "end_time": "2023-11-24T16:42:06.551861Z"
     }
    },
    "outputs": [],
@@ -169,8 +169,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T08:20:09.958443Z",
-     "end_time": "2023-11-23T08:20:10.972801Z"
+     "start_time": "2023-11-24T16:42:09.040274Z",
+     "end_time": "2023-11-24T16:42:09.991581Z"
     }
    },
    "outputs": [],
@@ -180,6 +180,7 @@
     "\n",
     "# fill the ReplyBuffer\n",
     "buffer_data = load_buffer_minari(NAME_EXPERT_DATA)\n",
+    "data_size = len(buffer_data)\n",
     "\n",
     "# We will need the env for the plots. \n",
     "data_config = MinariDatasetConfig.load_from_file(NAME_EXPERT_DATA)\n",
@@ -209,10 +210,9 @@
     "\n",
     "Before we proceed, let's take a moment to become a little more familiar with the code. Let's spend some minutes reviewing:\n",
     "\n",
-    "    a - il_policy.py\n",
-    "    b - policy_registry.py \n",
-    "    c - training.py\n",
-    "    "
+    "a - il_policy.py\n",
+    "b - policy_registry.py\n",
+    "c - training.py\n"
    ]
   },
   {
@@ -221,19 +221,19 @@
    "metadata": {
     "scrolled": true,
     "ExecuteTime": {
-     "start_time": "2023-11-23T08:20:16.558905Z",
-     "end_time": "2023-11-23T08:20:23.233513Z"
+     "start_time": "2023-11-24T16:42:12.827639Z",
+     "end_time": "2023-11-24T16:42:47.144146Z"
     }
    },
    "outputs": [],
    "source": [
-    "# The model policy to be trained.\n",
+    "#The model policy to be trained.\n",
     "\n",
     "POLICY_NAME = PolicyName.imitation_learning\n",
     "\n",
-    "NUM_EPOCHS = 300\n",
-    "BATCH_SIZE = 256\n",
-    "UPDATE_PER_EPOCH = 100\n",
+    "NUM_EPOCHS = 20\n",
+    "BATCH_SIZE = 128\n",
+    "STEP_PER_EPOCH = 0.1*data_size\n",
     "\n",
     "# After every epoch we will collect some test statistics from the policy from NUMBER_TEST_ENVS independent envs.\n",
     "NUMBER_TEST_ENVS = 1\n",
@@ -253,7 +253,7 @@
     "    offline_policy_config=offline_policy_config,\n",
     "    num_epochs = NUM_EPOCHS,\n",
     "    number_test_envs=NUMBER_TEST_ENVS,\n",
-    "    update_per_epoch=UPDATE_PER_EPOCH,\n",
+    "    step_per_epoch=STEP_PER_EPOCH,\n",
     "    restore_training=False,\n",
     "    batch_size=BATCH_SIZE\n",
     ")"
@@ -272,8 +272,8 @@
    "metadata": {
     "scrolled": false,
     "ExecuteTime": {
-     "start_time": "2023-11-23T08:20:27.821511Z",
-     "end_time": "2023-11-23T08:20:58.988447Z"
+     "start_time": "2023-11-24T16:42:49.544152Z",
+     "end_time": "2023-11-24T16:43:17.519357Z"
     }
    },
    "outputs": [],
@@ -385,8 +385,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T08:21:18.880512Z",
-     "end_time": "2023-11-23T08:21:54.692452Z"
+     "start_time": "2023-11-24T16:43:53.298645Z",
+     "end_time": "2023-11-24T16:44:24.256635Z"
     }
    },
    "outputs": [],
