--- a/notebooks/nb_160_Offline_RL_part_I.ipynb
+++ b/notebooks/nb_160_Offline_RL_part_I.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The idea of offline RL is simple: find the optimal policy from a given dataset. The dataset doesn't need to be collected from experts as in imitation learning and neither from the same task but in the last case it should be representative of our problem at hand. So offline RL covers most of the realistic scenarios but, also it could be applied to a lot of data coming from different sources as we saw before ....\n",
+    "The idea of offline RL is simple: find the optimal policy from a given dataset. The dataset doesn't need to be collected from experts as in imitation learning and neither from the same task but in the last case it should be representative of our problem at hand. So offline RL covers most of the realistic scenarios, but also it could be applied to a lot of data coming from different sources as we saw before ....\n",
     "\n",
     "\n",
     "The key distinction between online RL and offline RL lies in their exploration capabilities. In online RL, we actively explore the state-action space, while offline RL operates solely within a fixed dataset (denoted as $D$). Going \"out of distribution\" beyond this dataset in offline RL can lead to severe issues.\n",
@@ -25,7 +25,7 @@
     "As shown in the figure above on the right, once you are out of distribution (o.o.d) (states $s$ and $s'$ in red in the figure), as you don't have any feedback it will be hard to come back to $D$, as the o.o.d errors will propagate. As we will see this is one of the main challenges of offline RL and there are different techniques to mitigate this wrong behavior.\n",
     "\n",
     "The o.o.d. issues are not the only distributional shift effect in offline RL.\n",
-    "After computing the optimal policy, it typically operates within a subset of the original dataset distribution ($D'$ subset in green in the figure below), creating a distinct form of distributional shift . Evaluating a policy substantially different from the behavior policy reduces the effective sample size (from $D$ to $D'$), resulting in increased variance in the estimates. In simpler terms, the limited number of data points may not accurately represent the true data distribution.\n",
+    "After computing the optimal policy, it typically operates within a subset of the original dataset distribution, creating a distinct form of distributional shift (D' subset in green in the figure below). Evaluating a policy substantially different from the behavior policy reduces the effective sample size (from D to D'), resulting in increased variance in the estimates. In simpler terms, the limited number of data points may not accurately represent the true data distribution. \n",
     "\n",
     "<img src=\"Images/offline_RL_2.jpg\" alt=\"offline_rl_2\" style=\"height:400px;\">\n",
     "\n",
@@ -42,7 +42,7 @@
     "**EXERCISE 1**:  Let's check how efficient are online algorithms with finite amount of data.\n",
     "\n",
     "\n",
-    "Let's give a look to the exercise in notebook 6a. We will apply a simple offpolicy algorithm, Deep Q-Network (DQN), replacing the environment we typically use in online settings with a ReplyBuffer of state-action-rewards pairs that we will collect with two suboptimal policies that will be the case in realistic scenarios (i.e. the data could come from many different sources).\n",
+    "Let's give a look to the exercise in notebook 6a. We will apply a simple offpolicy algorithm, Deep Q-Network (DQN), replacing the environment we typically use in online settings with a ReplyBuffer of state-action-rewards pairs that we will collect with two suboptimal policies that will be the case in realistic scenarios (i.e. the data could come from many different sources). \n",
     "\n",
     "**Important**: In contrast to Imitation Learning, now we will be interested in a reward function as in DQN we will compute the TD error, i.e.:\n",
     "\n",
@@ -107,15 +107,6 @@
    "source": [
     "**EXERCISE II**: Another desired property of offline RL, as discussed in the open source RL dataset section, is to reuse pieces of trajectories from different datasets in order to create an optimal one for the task in question!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
   }
  ],
  "metadata": {
