--- a/notebooks/nb_161_Offpolicy_distributional_shift_1.ipynb
+++ b/notebooks/nb_161_Offpolicy_distributional_shift_1.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T09:03:00.562187Z",
-     "end_time": "2023-11-23T09:03:02.306139Z"
+     "start_time": "2023-11-24T16:07:12.263613Z",
+     "end_time": "2023-11-24T16:07:13.835752Z"
     }
    },
    "outputs": [],
@@ -51,7 +51,7 @@
     "\n",
     "I  - **Suboptimal expert policy**:  collect ~ 8000 steps\n",
     "\n",
-    "II - **expert policy**: collect ~ 300 steps\n",
+    "II - **expert policy**: collect ~ 1000 steps\n",
     "\n",
     "(This could be a realistic situation where you could have only a few human expert data available and the rest of the data is collected through a far from optimal policy.)\n",
     "\n",
@@ -93,8 +93,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T09:03:14.908124Z",
-     "end_time": "2023-11-23T09:03:15.044391Z"
+     "start_time": "2023-11-24T16:07:16.840208Z",
+     "end_time": "2023-11-24T16:07:16.994904Z"
     }
    },
    "outputs": [],
@@ -128,8 +128,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T09:03:16.887433Z",
-     "end_time": "2023-11-23T09:03:16.891899Z"
+     "start_time": "2023-11-24T16:07:18.383684Z",
+     "end_time": "2023-11-24T16:07:18.392400Z"
     }
    },
    "outputs": [],
@@ -140,7 +140,7 @@
     "\n",
     "BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_deterministic_4_0_to_7_7\n",
     "DATA_SET_IDENTIFIER_II = \"_expert\"\n",
-    "NUM_STEPS_II = 300\n"
+    "NUM_STEPS_II = 1000\n"
    ]
   },
   {
@@ -156,8 +156,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T09:03:19.026048Z",
-     "end_time": "2023-11-23T09:03:19.591206Z"
+     "start_time": "2023-11-24T16:07:19.871136Z",
+     "end_time": "2023-11-24T16:07:20.379213Z"
     }
    },
    "outputs": [],
@@ -223,8 +223,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T09:04:04.783251Z",
-     "end_time": "2023-11-23T09:04:05.453808Z"
+     "start_time": "2023-11-24T16:07:24.547105Z",
+     "end_time": "2023-11-24T16:07:25.189152Z"
     }
    },
    "outputs": [],
@@ -233,6 +233,7 @@
     "name_combined_dataset = config_combined_data.data_set_name\n",
     "\n",
     "buffer_data = load_buffer_minari(name_combined_dataset)\n",
+    "data_size = len(buffer_data)\n",
     "\n",
     "# Compute state-action data distribution\n",
     "state_action_count_data, _ = get_state_action_data_and_policy_grid_distributions(buffer_data, env)\n",
@@ -253,8 +254,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T09:04:09.543247Z",
-     "end_time": "2023-11-23T09:04:09.546623Z"
+     "start_time": "2023-11-24T16:07:26.602656Z",
+     "end_time": "2023-11-24T16:07:26.611050Z"
     }
    },
    "outputs": [],
@@ -283,17 +284,17 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T09:04:11.425532Z",
-     "end_time": "2023-11-23T09:04:15.954435Z"
+     "start_time": "2023-11-24T16:11:22.391320Z",
+     "end_time": "2023-11-24T16:11:38.215933Z"
     }
    },
    "outputs": [],
    "source": [
     "# Run the training\n",
     "\n",
-    "NUM_EPOCHS = 50\n",
-    "BATCH_SIZE = 256\n",
-    "UPDATE_PER_EPOCH = 100\n",
+    "NUM_EPOCHS = 20\n",
+    "BATCH_SIZE = 128\n",
+    "STEP_PER_EPOCH = 0.1*data_size\n",
     "\n",
     "# After every epoch we will collect some test statistics from the policy from NUMBER_TEST_ENVS independent envs.\n",
     "NUMBER_TEST_ENVS = 1\n",
@@ -305,7 +306,7 @@
     "    offline_policy_config=offline_policy_config,\n",
     "    num_epochs = NUM_EPOCHS,\n",
     "    number_test_envs=NUMBER_TEST_ENVS,\n",
-    "    update_per_epoch=UPDATE_PER_EPOCH,\n",
+    "    step_per_epoch=STEP_PER_EPOCH,\n",
     "    restore_training=False,\n",
     ")"
    ]
@@ -322,13 +323,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T09:04:53.274336Z",
-     "end_time": "2023-11-23T09:04:53.322673Z"
+     "start_time": "2023-11-24T16:11:40.173889Z",
+     "end_time": "2023-11-24T16:11:40.184722Z"
     }
    },
    "outputs": [],
    "source": [
-    "POLICY_FILE = \"policy.pth\"\n",
+    "POLICY_FILE = \"policy_best_reward.pth\"\n",
     "\n",
     "# restore a policy with the same configuration as the one we trained.\n",
     "policy = restore_trained_offline_policy(offline_policy_config)\n",
@@ -377,8 +378,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T09:05:01.076252Z",
-     "end_time": "2023-11-23T09:07:00.140263Z"
+     "start_time": "2023-11-24T15:58:47.521383Z",
+     "end_time": "2023-11-24T16:00:34.931070Z"
     }
    },
    "outputs": [],
