--- a/notebooks/nb_162_Offpolicy_distributional_shift_2.ipynb
+++ b/notebooks/nb_162_Offpolicy_distributional_shift_2.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T10:23:10.722183Z",
-     "end_time": "2023-11-23T10:23:12.754719Z"
+     "start_time": "2023-11-24T15:14:28.491652Z",
+     "end_time": "2023-11-24T15:14:30.182328Z"
     }
    },
    "outputs": [],
@@ -37,7 +37,6 @@
     "\n",
     "load_env_variables()\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "# ToDo: this should be load automatically\n",
     "register_grid_envs()"
    ]
   },
@@ -61,7 +60,7 @@
     "\n",
     "I  - **Suboptimal expert policy** (behavior_8x8_moves_downwards_within_strip):  moves agent in suboptimal way downwards starting from (0,0) (collect 8000 steps)\n",
     "\n",
-    "II - **Optimal expert policy**(behavior_8x8_deterministic_4_0_to_7_7): moves agent in the optimal path from (4,0) to (7,7) (collect 300 steps)\n",
+    "II - **Optimal expert policy**(behavior_8x8_deterministic_4_0_to_7_7): moves agent in the optimal path from (4,0) to (7,7) (collect 1000 steps)\n",
     "\n",
     "\n",
     "In this example we will use again as off-policy RL algorithm, the Deep Q-Network (DQN) algorithm."
@@ -86,8 +85,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T10:23:12.762329Z",
-     "end_time": "2023-11-23T10:23:12.905826Z"
+     "start_time": "2023-11-24T15:18:25.747995Z",
+     "end_time": "2023-11-24T15:18:25.928046Z"
     }
    },
    "outputs": [],
@@ -121,8 +120,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T10:23:17.284639Z",
-     "end_time": "2023-11-23T10:23:17.294529Z"
+     "start_time": "2023-11-24T15:14:46.193491Z",
+     "end_time": "2023-11-24T15:14:46.200540Z"
     }
    },
    "outputs": [],
@@ -133,7 +132,7 @@
     "\n",
     "DATA_SET_IDENTIFIER_II = \"_optimal_\"\n",
     "BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_deterministic_4_0_to_7_7\n",
-    "NUM_STEPS_II = 300"
+    "NUM_STEPS_II = 1000"
    ]
   },
   {
@@ -148,8 +147,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T10:23:18.786148Z",
-     "end_time": "2023-11-23T10:23:19.448448Z"
+     "start_time": "2023-11-24T15:14:47.627210Z",
+     "end_time": "2023-11-24T15:14:48.267078Z"
     }
    },
    "outputs": [],
@@ -216,8 +215,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T10:23:24.734120Z",
-     "end_time": "2023-11-23T10:23:25.687239Z"
+     "start_time": "2023-11-24T15:14:59.921826Z",
+     "end_time": "2023-11-24T15:15:00.836537Z"
     }
    },
    "outputs": [],
@@ -226,6 +225,7 @@
     "\n",
     "#Create Buffers with minari datasets\n",
     "buffer_data = load_buffer_minari(name_combined_dataset)\n",
+    "data_size = len(buffer_data)\n",
     "\n",
     "# Compute state-action data distribution\n",
     "state_action_count_data, _ = get_state_action_data_and_policy_grid_distributions(buffer_data, env)\n",
@@ -246,8 +246,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T10:23:27.760489Z",
-     "end_time": "2023-11-23T10:23:27.765433Z"
+     "start_time": "2023-11-24T15:18:53.363301Z",
+     "end_time": "2023-11-24T15:18:53.366455Z"
     }
    },
    "outputs": [],
@@ -276,17 +276,16 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T10:23:30.622124Z",
-     "end_time": "2023-11-23T10:23:58.772614Z"
+     "start_time": "2023-11-24T15:18:55.331162Z",
+     "end_time": "2023-11-24T15:19:53.278917Z"
     }
    },
    "outputs": [],
    "source": [
     "# Run the training\n",
-    "\n",
-    "NUM_EPOCHS = 200\n",
-    "BATCH_SIZE = 256\n",
-    "UPDATE_PER_EPOCH = 100\n",
+    "NUM_EPOCHS = 20\n",
+    "BATCH_SIZE = 128\n",
+    "STEP_PER_EPOCH = 0.1*data_size\n",
     "\n",
     "# After every epoch we will collect some test statistics from the policy from NUMBER_TEST_ENVS independent envs.\n",
     "NUMBER_TEST_ENVS = 1\n",
@@ -297,8 +296,8 @@
     "offline_training(\n",
     "    offline_policy_config=offline_policy_config,\n",
     "    num_epochs = NUM_EPOCHS,\n",
+    "    step_per_epoch=STEP_PER_EPOCH,\n",
     "    number_test_envs=NUMBER_TEST_ENVS,\n",
-    "    update_per_epoch=UPDATE_PER_EPOCH,\n",
     "    restore_training=False,\n",
     ")"
    ]
@@ -315,8 +314,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T10:24:35.049270Z",
-     "end_time": "2023-11-23T10:24:35.055669Z"
+     "start_time": "2023-11-24T15:18:08.073981Z",
+     "end_time": "2023-11-24T15:18:08.084727Z"
     }
    },
    "outputs": [],
@@ -345,9 +344,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#env_2D_grid_initial_config.obstacles = OBSTACLE.obst_free_8x8\n",
-    "#env = InitialConfigCustom2DGridEnvWrapper(gym.make(ENV_NAME, render_mode=RenderMode.RGB_ARRAY_LIST), #env_config=env_2D_grid_initial_config)\n",
-    "\n",
     "offpolicy_rendering(\n",
     "    env_or_env_name=env,\n",
     "    render_mode=RenderMode.RGB_ARRAY_LIST,\n",
