--- a/notebooks/nb_181_Offline_rl_algorithms_I.ipynb
+++ b/notebooks/nb_181_Offline_rl_algorithms_I.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T12:01:44.022187Z",
-     "end_time": "2023-11-23T12:01:46.308293Z"
+     "start_time": "2023-11-24T16:19:52.191645Z",
+     "end_time": "2023-11-24T16:19:53.770312Z"
     }
    },
    "outputs": [],
@@ -30,6 +30,7 @@
     "from training_rl.offline_rl.offline_trainings.policy_config_data_class import get_trained_policy_path\n",
     "import os\n",
     "from training_rl.offline_rl.offline_trainings.restore_policy_model import restore_trained_offline_policy\n",
+    "from training_rl.offline_rl.utils import load_buffer_minari\n",
     "\n",
     "\n",
     "load_env_variables()\n",
@@ -71,8 +72,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T12:01:46.309847Z",
-     "end_time": "2023-11-23T12:01:46.313497Z"
+     "start_time": "2023-11-24T16:20:19.265572Z",
+     "end_time": "2023-11-24T16:20:19.269338Z"
     }
    },
    "outputs": [],
@@ -106,8 +107,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T12:06:58.147908Z",
-     "end_time": "2023-11-23T12:06:58.152443Z"
+     "start_time": "2023-11-24T16:25:34.647009Z",
+     "end_time": "2023-11-24T16:25:34.688059Z"
     }
    },
    "outputs": [],
@@ -138,8 +139,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T12:06:59.283981Z",
-     "end_time": "2023-11-23T12:07:03.419933Z"
+     "start_time": "2023-11-24T16:25:36.461088Z",
+     "end_time": "2023-11-24T16:25:40.265348Z"
     }
    },
    "outputs": [],
@@ -151,7 +152,9 @@
     "        behavior_policy_names = (BEHAVIOR_POLICY_I, BEHAVIOR_POLICY_II),\n",
     "        combined_dataset_identifier = \"combined_dataset\",\n",
     "        env_2d_grid_initial_config = env_2D_grid_initial_config,\n",
-    ")"
+    ")\n",
+    "buffer_data = load_buffer_minari(config_combined_data.data_set_name)\n",
+    "data_size = len(buffer_data)"
    ]
   },
   {
@@ -205,15 +208,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T12:07:06.507465Z",
-     "end_time": "2023-11-23T12:07:06.512902Z"
+     "start_time": "2023-11-24T16:28:58.181174Z",
+     "end_time": "2023-11-24T16:28:58.187720Z"
     }
    },
    "outputs": [],
    "source": [
     "# The model policy to be trained.\n",
     "POLICY_NAME = PolicyName.bcq_discrete\n",
-    "\n",
     "\n",
     "NAME_EXPERT_DATA = config_combined_data.data_set_name\n",
     "# TrainedPolicyConfig is a handy object that will help us to deal with the policy configuration data.\n",
@@ -237,15 +239,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T12:07:07.387436Z",
-     "end_time": "2023-11-23T12:07:22.389577Z"
+     "start_time": "2023-11-24T16:23:11.441535Z",
+     "end_time": "2023-11-24T16:24:59.092322Z"
     }
    },
    "outputs": [],
    "source": [
-    "NUM_EPOCHS = 300\n",
-    "BATCH_SIZE = 256\n",
-    "UPDATE_PER_EPOCH = 100\n",
+    "NUM_EPOCHS = 20\n",
+    "BATCH_SIZE = 128\n",
+    "STEP_PER_EPOCH = 0.05*data_size\n",
     "\n",
     "# After every epoch we will collect some test statistics from the policy from NUMBER_TEST_ENVS independent envs.\n",
     "NUMBER_TEST_ENVS = 1\n",
@@ -258,7 +260,7 @@
     "    offline_policy_config=offline_policy_config,\n",
     "    num_epochs = NUM_EPOCHS,\n",
     "    number_test_envs=NUMBER_TEST_ENVS,\n",
-    "    update_per_epoch=UPDATE_PER_EPOCH,\n",
+    "    step_per_epoch=STEP_PER_EPOCH,\n",
     "    restore_training=False,\n",
     ")"
    ]
@@ -268,7 +270,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "POLICY_FILE = \"policy_best_reward.pth\"\n",
+    "POLICY_FILE = \"policy.pth\"\n",
     "# restore a policy with the same configuration as the one we trained.\n",
     "policy = restore_trained_offline_policy(offline_policy_config)\n",
     "# load the weights\n",
@@ -280,8 +282,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-11-23T12:07:32.951772Z",
-     "end_time": "2023-11-23T12:07:32.966662Z"
+     "start_time": "2023-11-24T16:28:22.246178Z",
+     "end_time": "2023-11-24T16:28:22.292105Z"
     }
    }
   },
@@ -307,9 +309,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**What do you observe? Try to increase the number of expert samples and run it again? What happens now?**\n",
+    "\n",
     "**As we can see the BCQ algorithm is able to stitch two trajectories in order to create an optimal one.**\n",
     "\n",
-    "**Try to do the same with CQL. What do you observe? Try to increase the number of expert samples and run it again.**"
+    "**Try to do the same with CQL and compare results.**"
    ]
   },
   {
