--- a/notebooks/nb_182_Offline_rl_algorithms_II.ipynb
+++ b/notebooks/nb_182_Offline_rl_algorithms_II.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T12:44:42.649169Z",
-     "end_time": "2023-11-23T12:44:44.900642Z"
+     "start_time": "2023-11-24T16:32:17.063655Z",
+     "end_time": "2023-11-24T16:32:18.882627Z"
     }
    },
    "outputs": [],
@@ -30,7 +30,7 @@
     "from training_rl.offline_rl.offline_trainings.policy_config_data_class import get_trained_policy_path\n",
     "import os\n",
     "from training_rl.offline_rl.offline_trainings.restore_policy_model import restore_trained_offline_policy\n",
-    "\n",
+    "from training_rl.offline_rl.utils import load_buffer_minari\n",
     "\n",
     "load_env_variables()\n",
     "\n",
@@ -68,8 +68,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T12:44:44.903222Z",
-     "end_time": "2023-11-23T12:44:45.060150Z"
+     "start_time": "2023-11-24T16:32:29.915543Z",
+     "end_time": "2023-11-24T16:32:30.082588Z"
     }
    },
    "outputs": [],
@@ -104,8 +104,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T12:44:45.060664Z",
-     "end_time": "2023-11-23T12:44:45.062140Z"
+     "start_time": "2023-11-24T16:32:31.749744Z",
+     "end_time": "2023-11-24T16:32:31.754826Z"
     }
    },
    "outputs": [],
@@ -137,8 +137,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T12:44:45.063223Z",
-     "end_time": "2023-11-23T12:44:45.812066Z"
+     "start_time": "2023-11-24T16:32:32.869322Z",
+     "end_time": "2023-11-24T16:32:33.481293Z"
     }
    },
    "outputs": [],
@@ -150,7 +150,9 @@
     "        behavior_policy_names = (BEHAVIOR_POLICY_I, BEHAVIOR_POLICY_II),\n",
     "        combined_dataset_identifier = \"combined_dataset\",\n",
     "        env_2d_grid_initial_config = env_2D_grid_initial_config,\n",
-    ")"
+    ")\n",
+    "buffer_data = load_buffer_minari(config_combined_data.data_set_name)\n",
+    "data_size = len(buffer_data)"
    ]
   },
   {
@@ -204,8 +206,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T12:44:52.720087Z",
-     "end_time": "2023-11-23T12:44:52.723555Z"
+     "start_time": "2023-11-24T16:32:37.313786Z",
+     "end_time": "2023-11-24T16:32:37.318615Z"
     }
    },
    "outputs": [],
@@ -237,15 +239,15 @@
    "metadata": {
     "scrolled": false,
     "ExecuteTime": {
-     "start_time": "2023-11-23T12:44:55.188845Z",
-     "end_time": "2023-11-23T12:45:41.574941Z"
+     "start_time": "2023-11-24T16:32:39.722413Z",
+     "end_time": "2023-11-24T16:34:06.279972Z"
     }
    },
    "outputs": [],
    "source": [
-    "NUM_EPOCHS = 800\n",
-    "BATCH_SIZE = 512\n",
-    "UPDATE_PER_EPOCH = 500\n",
+    "NUM_EPOCHS = 20\n",
+    "BATCH_SIZE = 128\n",
+    "STEP_PER_EPOCH = 0.1*data_size\n",
     "\n",
     "# After every epoch we will collect some test statistics from the policy from NUMBER_TEST_ENVS independent envs.\n",
     "NUMBER_TEST_ENVS = 1\n",
@@ -258,7 +260,7 @@
     "    offline_policy_config=offline_policy_config,\n",
     "    num_epochs = NUM_EPOCHS,\n",
     "    number_test_envs=NUMBER_TEST_ENVS,\n",
-    "    update_per_epoch=UPDATE_PER_EPOCH,\n",
+    "    step_per_epoch=STEP_PER_EPOCH,\n",
     "    restore_training=False,\n",
     ")"
    ]
@@ -275,8 +277,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-23T12:45:49.343627Z",
-     "end_time": "2023-11-23T12:45:49.386566Z"
+     "start_time": "2023-11-24T16:34:31.570542Z",
+     "end_time": "2023-11-24T16:34:31.616851Z"
     }
    },
    "outputs": [],
